{
    "name": "InputMaps",
    "maps": [
        {
            "name": "Touch",
            "id": "8d082cc6-75be-471f-a288-85fbb9384a35",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "c61e39b1-7506-4b63-abff-0e38b77114a0",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "87e03dd1-0b9d-44ae-af1d-95236eb49d0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "6f6c1a5c-220e-48ea-9587-b29e8ed7a158",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf9ff944-b09a-406e-8a9e-f21e20a22ceb",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d454122c-a627-4291-8c12-85d69272d256",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42d52243-6199-4c73-b718-dad7a608b9cc",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}